small grammar fix

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h1>PROGRAMMING</h1>
                     <p>
-                    	Every project that I work on, I finish. Every challenge that I face, I overcome. I am able to learn whatever technology stack is required to fix problems, and I look forward to learning more.
+                    	Every project that I start, I finish. Every challenge that I face, I overcome. I am able to learn whatever technology stack is required to fix problems, and I look forward to learning more.
                     </p>
                     <p>
                     	I have enough practical (technical) and theorical (insight) to do whatever is necessary for a project to succeed, and this is why clients love me. I have a substantial knowledge of computation theory, computation complexity and the history and evolution of computers as we know it, and where the computing industry is heading into the future.
