removed the small enter logos

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script type="text/JavaScript">
-        var logos = ['bd.png', 'bmhfd.png', 'bmhsd.png', 'byhfd.png', 'byhsd.png', 'gd.png', 'gmhfd.png', 'gmhsd.png', 'gyhfd.png', 'gyhsd.png', 'rd.png', 'rmhfd.png', 'rmhsd.png', 'ryhfd.png', 'ryhsd.png', 'md.png', 'mbhfd.png', 'mbhsd.png', 'mghfd.png', 'mghsd.png', 'mrhfd.png', 'mrhsd.png', 'myhfd.png', 'myhsd.png', 'yd.png', 'ybhfd.png', 'ybhsd.png', 'yghfd.png', 'yghsd.png', 'yrhfd.png', 'yrhsd.png', 'ymhfd.png', 'ymhsd.png'];
+        var logos = ['bd.png', 'bmhfd.png', 'byhfd.png', 'gd.png', 'gmhfd.png', 'gyhfd.png', 'rd.png', 'rmhfd.png', 'ryhfd.png', 'md.png', 'mbhfd.png', 'mghfd.png', 'mrhfd.png', 'myhfd.png', 'yd.png', 'ybhfd.png', 'yghfd.png', 'yrhfd.png', 'ymhfd.png'];
         var intro_backgrounds = ["1a.jpg", "1b.jpg", "1c.jpg", "1d.jpg", "1e.jpg"];
         var programming_backgrounds = ["2a.jpg", "2b.jpg", "2c.jpg"];
 
