changed the colors and the fonts to be more consistent

--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="hidden">
-                        <a href="#page-top"></a>
-                    </li>
+                    <li class="hidden"><a href="#page-top"></a></li>
                     <li>
                         <a class="page-scroll" href="#about">About</a>
                     </li>
@@ -78,13 +76,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <p class="intro-text" style="text-shadow: 2px 2px #666666;">
-                            <b>Riaan Francois Venter<br>Professional FinTech Advisor and Developer</b><br><br>
-                            &#9632; 9 years offshore wealth management experience<br>
-                            &#9632; 9 years programming experience<br><br>
-                            <span class="taddress">
-                            	<a href="mailto:email@rfv.io">email@rfv.io</a>
-                           	</span>
+                        <p class="intro-text">
+                            <b>Riaan Francois Venter</b><br>FinTech Advisor and Developer<br><br>
+                            10 years experience with offshore wealth management and software development<br><br>
+                            <span class="taddress"><a href="mailto:email@rfv.io">email@rfv.io</a></span>
                         </p>
                     </div>
                 </div>
@@ -92,42 +87,45 @@
         </div>
     </header>
 
-    <!-- About Section -->
-    <section id="about" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h1>ABOUT</h1>
-                <p>
-                <img src="img/RFVenter.jpg" width="256" style="border:2px solid white"/><br><br>
-                I stand at the bleeding edge of Finance and Computation, creating value, very well. These two fields are my passion, and in the past 13 years, I have written a number of software solutions for leading companies as well as managing substantially large portfolios for wealthy investors in the Middle East and London.</p>
-                <p>
-                I am a Software Developer focusing on: numerical computation, data extraction, database implementation, data analysis. I have several certificates in Python, have developed several smart contracts with Solidity, and I am  studying Clojure.</p>
-                <p>
-                I am a Wealth Manager with a strong background in international investment. I hold a Level 4 Diploma in Investment Advice from the Chartered Institute of Securities and Investments - London, United Kingdom, and several other certificates in finance. I only offer this service to select private investors.</p>
-                <p>
-                By combining these two fields I am actively involved in the FinTech industry, currently focusing on cryptocurrency investment initiatives as well as the decentralized smart contract revolution. I am a cryptocurrency blogger, smart contract developer, as well as part of consortia exploring business opportunities within this field.</p>
-                <p>
-                I am a family man, exercise daily, eat healthily, don't drink alcohol or smoke. I do not watch TV or read news on the Internet that has no relevance to me. I am a focused machine.</p>
-                <h3>Learn About Ethereum</h3>
-                <p>
-                To learn more about Ethereum read my book!
-                <ul class="list-inline banner-social-buttons">
-                    <li>
-                        <a href="files/The Modern Ethereum.pdf" class="btn btn-default btn-lg">The Modern Ethereum</a>
-                    </li>
-                </ul>
-                </p>
-                <h3>Resume</h3>
-                <p>
-                <ul class="list-inline banner-social-buttons">
-                    <li>
-                        <a class="btn btn-default btn-lg" href="https://drive.google.com/open?id=0BzkLEtCwUeaASElXNE5fXzFUZDA">Resume</a>
-                    </li>
-                </ul>
-                </p>
-    		</div>
-    	</div>
+    <!-- About section -->
+    <section id="about" class="content-section text-center">
+        <div class="details-section">
+            <div class="container">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <h1>ABOUT</h1>
+                    <p>
+                    <img src="img/RFVenter.jpg" width="256" style="border:2px solid white"/><br><br>
+                    I stand at the bleeding edge of Finance and Computation, creating value, very well. These two fields are my passion, and in the past 13 years, I have written a number of software solutions for leading companies as well as managing substantially large portfolios for wealthy investors in the Middle East and London.</p>
+                    <p>
+                    I am a Software Developer focusing on: numerical computation, data extraction, database implementation, data analysis. I have several certificates in Python, have developed several smart contracts with Solidity, and I am  studying Clojure.</p>
+                    <p>
+                    I am a Wealth Manager with a strong background in international investment. I hold a Level 4 Diploma in Investment Advice from the Chartered Institute of Securities and Investments - London, United Kingdom, and several other certificates in finance. I only offer this service to select private investors.</p>
+                    <p>
+                    By combining these two fields I am actively involved in the FinTech industry, currently focusing on cryptocurrency investment initiatives as well as the decentralized smart contract revolution. I am a cryptocurrency blogger, smart contract developer, as well as part of consortia exploring business opportunities within this field.</p>
+                    <p>
+                    I am a family man, exercise daily, eat healthily, don't drink alcohol or smoke. I do not watch TV or read news on the Internet that has no relevance to me. I am a focused machine.</p>
+                    <h3>Learn About Ethereum</h3>
+                    <p>
+                    To learn more about Ethereum read my book!
+                    <ul class="list-inline banner-social-buttons">
+                        <li>
+                            <a href="files/The Modern Ethereum.pdf" class="btn btn-default btn-lg">The Modern Ethereum</a>
+                        </li>
+                    </ul>
+                    </p>
+                    <h3>Resume</h3>
+                    <p>
+                    <ul class="list-inline banner-social-buttons">
+                        <li>
+                            <a class="btn btn-default btn-lg" href="https://drive.google.com/open?id=0BzkLEtCwUeaASElXNE5fXzFUZDA">Resume</a>
+                        </li>
+                    </ul>
+                    </p>
+                </div>
+            </div>
+        </div>
     </section>
+
 
     <!-- Education Section -->
     <section id="education" class="content-section text-center">
@@ -179,25 +177,25 @@
                     	I enjoy working on projects with a team that cares about creating quality, maintainable code.
                     </p>
                     <h3>Technology Stack</h3><br>
-                    <p style="text-shadow: 2px 2px #666666;">                    	
+                    <p>                    	
                     	Python, Numpy, Scipy, Pandas, Matplotlib, Sqlalchemy
                     </p>
-                    <p style="text-shadow: 2px 2px #666666;"> 
+                    <p> 
                     	IPython, PyCharm, Sublime Text
                     </p>
-                    <p style="text-shadow: 2px 2px #666666;"> 
+                    <p> 
                     	Ethereum, Solidity, Truffle
                     </p>
-                    <p style="text-shadow: 2px 2px #666666;"> 
+                    <p> 
                     	Nodejs, NPM, Bootstrap, JQuery
                     </p>
-                    <p style="text-shadow: 2px 2px #666666;"> 
+                    <p> 
                     	Regex
                     </p>
-                    <p style="text-shadow: 2px 2px #666666;"> 
+                    <p> 
                     	MySql, PostgresSQL, Sqlite, Json, XML, Excel, CSV
                     </p>
-                    <p style="text-shadow: 2px 2px #666666;"> 
+                    <p> 
                     	GIT, Github, Heroku
                     </p>
                 </div>
