cosmetic changes| header gradient, other minor changes

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script type="text/JavaScript">
-        var logos = ['bd.png', 'bmhfd.png', 'byhfd.png', 'gd.png', 'gmhfd.png', 'gyhfd.png', 'rd.png', 'rmhfd.png', 'ryhfd.png', 'md.png', 'mbhfd.png', 'mghfd.png', 'mrhfd.png', 'myhfd.png', 'yd.png', 'ybhfd.png', 'yghfd.png', 'yrhfd.png', 'ymhfd.png'];
+        var logos = ['bmhfd.png', 'byhfd.png', 'gmhfd.png', 'gyhfd.png', 'rmhfd.png', 'ryhfd.png', 'mbhfd.png', 'mghfd.png', 'mrhfd.png', 'myhfd.png', 'ybhfd.png', 'yghfd.png', 'yrhfd.png', 'ymhfd.png'];
 
     	function starter()	{
     		var logo_name = logos[Math.floor(Math.random() * logos.length)];
@@ -77,8 +77,8 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <p class="intro-text">
-                            <b>Riaan Francois Venter</b><br>FinTech Advisor and Developer<br><br>
-                            10 years experience with offshore wealth management and software development<br><br>
+                            <b>Riaan Francois Venter<br>FinTech</b><font color="gray"> Developer, Investor and Advisor<br><br>
+                            10 years experience with offshore wealth management and software development<br><br></font>
                             <span class="taddress"><a href="mailto:email@rfv.io">email@rfv.io</a></span>
                         </p>
                     </div>
@@ -106,7 +106,6 @@
                     I am a family man, exercise daily, eat healthily, don't drink alcohol or smoke. I do not watch TV or read news on the Internet that has no relevance to me. I am a focused machine.</p>
                     <h3>Learn About Ethereum</h3>
                     <p>
-                    To learn more about Ethereum read my book!
                     <ul class="list-inline banner-social-buttons">
                         <li>
                             <a href="files/The Modern Ethereum.pdf" class="btn btn-default btn-lg">The Modern Ethereum</a>
@@ -205,7 +204,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p><font color="yellow">Copyright &copy; </font>
+            <p>
                 <a href="http://www.rfv.io"><img src="img/g00.png" width="60px" style="border: none;"/></a>
             	<img src="img/code.png" width="120px" style="border: none;"/>
             </p>
