--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <div class="col-md-8 col-md-offset-2">
                         <p class="intro-text">
                             <b>Riaan Francois Venter<br>FinTech</b><font color="gray"> Developer, Investor and Advisor<br><br>
-                            10 years experience with offshore wealth management and software development<br><br></font>
+                            Over a decade of experience with offshore wealth management and software development<br><br></font>
                             <span class="taddress"><a href="mailto:email@rfv.io">email@rfv.io</a></span>
                         </p>
                     </div>
