--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <p class="intro-text">
-                            <b>Riaan Francois Venter<br>FinTech</b><font color="gray"> Developer, Investor and Advisor<br><br>
+                            <font class="name">Riaan Francois Venter<br>FinTech</font><font color="gray"> Developer, Investor and Advisor<br><br>
                             Over a decade of experience with offshore wealth management and software development<br><br></font>
                             <span class="taddress"><a href="mailto:email@rfv.io">email@rfv.io</a></span>
                         </p>
