--- a/index.html
+++ b/index.html
@@ -77,9 +77,41 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <p class="intro-text">
-                            <font class="name">Riaan Francois Venter<br>FinTech</font><font color="gray"> Developer, Investor and Advisor<br><br>
-                            Over a decade of experience with offshore wealth management and software development<br><br></font>
-                            <span class="taddress"><a href="mailto:email@rfv.io">email@rfv.io</a></span>
+                            <font class="name">
+                                Riaan Francois Venter<br>
+                                FinTech
+                            </font>
+                            <font color="gray"> 
+                                Developer, Investor and Advisor<br><br>
+                                Over a decade of experience with offshore wealth management and software development<br><br>
+                            </font>
+                                <table style="width:100%; font-size: 23px;">
+                                    <tr>
+                                        <td><a href="mailto:email@rfv.io">email@rfv.io</a></td>
+                                    </tr>
+                                    <tr>
+                                        <td colspan="2"><br/></td>
+                                    </tr>
+                                    <tr>
+                                        <td><a href="https://keybase.io/rfventer">Keybase</a></td>
+                                        <td><a href="https://github.com/RFVenter">Github</a></td>
+                                    </tr>
+                                    <tr>
+                                        <td><a href="https://stackoverflow.com/cv/rfventer">stack overflow</a></td>
+                                        <td><a href="https://www.linkedin.com/in/riaanfrancoisventer/">LinkedIn</a></td>
+                                    </tr>
+                                    <tr>
+                                        <td><a href="https://coinpaprika.com/person/riaan-francois-venter/">Coin Paprika</a></td>
+                                        <td><a href="https://angel.co/riaan-francois-venter-1">Angel List</a></td>
+                                    </tr>
+                                    <tr>
+                                        <td><a href="https://www.f6s.com/riaanfrancoisventer">F6S</a></td>
+                                        <td><a href="twitter https://twitter.com/RFVenter">Twitter</a></td>
+                                    </tr>
+                                </table>
+                                
+
+                           
                         </p>
                     </div>
                 </div>
