--- a/index.html
+++ b/index.html
@@ -20,20 +20,6 @@
     <!-- Theme CSS -->
     <link href="css/grayscale.css" rel="stylesheet">
 
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    <script type="text/JavaScript">
-        var logos = ['bmhfd.png', 'byhfd.png', 'gmhfd.png', 'gyhfd.png', 'rmhfd.png', 'ryhfd.png', 'mbhfd.png', 'mghfd.png', 'mrhfd.png', 'myhfd.png', 'ybhfd.png', 'yghfd.png', 'yrhfd.png', 'ymhfd.png'];
-
-    	function starter()	{
-    		var logo_name = logos[Math.floor(Math.random() * logos.length)];
-    		var logo_image = document.getElementById('RFV_logo');
-    		logo_image.src = 'img/' + logo_name;
-    	}
-    </script>
-
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top" onload="starter();">
@@ -46,7 +32,7 @@
                     Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <img id="RFV_logo" src="" height="37px">
+                    <img id="RFV_logo" src="img/RFV5s.svg" height="37px">
                 </a>
             </div>
 
@@ -93,11 +79,11 @@
                                         <td colspan="2"><br/></td>
                                     </tr>
                                     <tr>
-                                        <td><a href="https://keybase.io/rfventer">Keybase</a></td>
-                                        <td><a href="https://github.com/RFVenter">Github</a></td>
+                                        <td><a href="https://keybase.io/rfv5s">Keybase</a></td>
+                                        <td><a href="https://github.com/RFV5s">Github</a></td>
                                     </tr>
                                     <tr>
-                                        <td><a href="https://stackoverflow.com/cv/rfventer">stack overflow</a></td>
+                                        <td><a href="https://stackoverflow.com/users/6494274/rfv5s">stack overflow</a></td>
                                         <td><a href="https://www.linkedin.com/in/riaanfrancoisventer/">LinkedIn</a></td>
                                     </tr>
                                     <tr>
@@ -106,7 +92,7 @@
                                     </tr>
                                     <tr>
                                         <td><a href="https://www.f6s.com/riaanfrancoisventer">F6S</a></td>
-                                        <td><a href="twitter https://twitter.com/RFVenter">Twitter</a></td>
+                                        <td><a href="twitter https://twitter.com/RFV5s">Twitter</a></td>
                                     </tr>
                                 </table>
                                 
@@ -237,7 +223,7 @@
     <footer>
         <div class="container text-center">
             <p>
-                <a href="http://www.rfv.io"><img src="img/g00.png" width="60px" style="border: none;"/></a>
+                <a href="http://www.rfv.io"><img src="img/RFV5s.svg" height="30px" style="border: none;"/></a>
             	<img src="img/code.png" width="120px" style="border: none;"/>
             </p>
             	
