replaced bottom logo and removed old background image files

--- a/index.html
+++ b/index.html
@@ -223,8 +223,7 @@
     <footer>
         <div class="container text-center">
             <p>
-                <a href="http://www.rfv.io"><img src="img/RFV5s.svg" height="30px" style="border: none;"/></a>
-            	<img src="img/code.png" width="120px" style="border: none;"/>
+                <a href="http://www.rfv.io"><img src="img/RFV5s_block.svg" height="100px" style="border: none;"/></a>
             </p>
             	
         </div>
