--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
     <!-- Theme CSS -->
     <link href="css/grayscale.css" rel="stylesheet">
-
+    <meta name="google-site-verification" content="d3kEG3LVO2dtLbyNdfK8Q9QlaU6eliITGiB9JKho6Ig" />
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top" onload="starter();">
