--- a/index.html
+++ b/index.html
@@ -62,41 +62,38 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <p class="intro-text">
-                            <font class="name">
+                            <font color="white">
                                 Riaan Francois Venter<br>
                                 FinTech
                             </font>
                             <font color="gray"> 
                                 Developer, Investor and Advisor<br><br>
-                                Over a decade of experience with offshore wealth management and software development<br><br>
+                                Over a decade of experience with offshore wealth management and software development.
                             </font>
-                                <table style="width:100%; font-size: 23px;">
-                                    <tr>
-                                        <td><a href="mailto:email@rfv.io">email@rfv.io</a></td>
-                                    </tr>
-                                    <tr>
-                                        <td colspan="2"><br/></td>
-                                    </tr>
-                                    <tr>
-                                        <td><a href="https://keybase.io/rfv5s">Keybase</a></td>
-                                        <td><a href="https://github.com/RFV5s">Github</a></td>
-                                    </tr>
-                                    <tr>
-                                        <td><a href="https://stackoverflow.com/users/6494274/rfv5s">stack overflow</a></td>
-                                        <td><a href="https://www.linkedin.com/in/riaanfrancoisventer/">LinkedIn</a></td>
-                                    </tr>
-                                    <tr>
-                                        <td><a href="https://coinpaprika.com/person/riaan-francois-venter/">Coin Paprika</a></td>
-                                        <td><a href="https://angel.co/riaan-francois-venter-1">Angel List</a></td>
-                                    </tr>
-                                    <tr>
-                                        <td><a href="https://www.f6s.com/riaanfrancoisventer">F6S</a></td>
-                                        <td><a href="twitter https://twitter.com/RFV5s">Twitter</a></td>
-                                    </tr>
-                                </table>
-                                
-
-                           
+                            <table style="width:100%; font-size: 23px;">
+                                <tr>
+                                    <td><a href="mailto:email@rfv.io">email@rfv.io</a></td>
+                                </tr>
+                                <tr>
+                                    <td colspan="2"><br/></td>
+                                </tr>
+                                <tr>
+                                    <td><a href="https://keybase.io/rfv5s">Keybase</a></td>
+                                    <td><a href="https://github.com/RFV5s">Github</a></td>
+                                </tr>
+                                <tr>
+                                    <td><a href="https://stackoverflow.com/users/6494274/rfv5s">stack overflow</a></td>
+                                    <td><a href="https://www.linkedin.com/in/riaanfrancoisventer/">LinkedIn</a></td>
+                                </tr>
+                                <tr>
+                                    <td><a href="https://coinpaprika.com/person/riaan-francois-venter/">Coin Paprika</a></td>
+                                    <td><a href="https://angel.co/riaan-francois-venter-1">Angel List</a></td>
+                                </tr>
+                                <tr>
+                                    <td><a href="https://www.f6s.com/riaanfrancoisventer">F6S</a></td>
+                                    <td><a href="twitter https://twitter.com/RFV5s">Twitter</a></td>
+                                </tr>
+                            </table>
                         </p>
                     </div>
                 </div>
