cosmetic changes: plain black top header, updated logo

--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
                                     <td><a href="https://www.f6s.com/riaanfrancoisventer">F6S</a></td>
                                     <td><a href="twitter https://twitter.com/RFV5s">Twitter</a></td>
                                 </tr>
+                                <tr>
+                                    <td span=2 align="center" ><b><br><br>↓↓</b></td>
+                                </tr>
                             </table>
                         </p>
                     </div>
@@ -219,7 +222,7 @@
     <footer>
         <div class="container text-center">
             <p>
-                <a href="http://www.rfv.io"><img src="img/RFV5s_block.svg" height="100px" style="border: none;"/></a>
+                <a href="http://www.rfv.io"><img src="img/RFV5s.svg" height="20px" style="border: none;"/></a>
             </p>
             	
         </div>
