new email address new favicon for new logo

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             </font>
                             <table style="width:100%; font-size: 23px;">
                                 <tr>
-                                    <td><a href="mailto:email@rfv.io">email@rfv.io</a></td>
+                                    <td><a href="mailto:email@RFV5s.com">email@RFV5s.com</a></td>
                                 </tr>
                                 <tr>
                                     <td colspan="2"><br/></td>
