Clean up sentences

--- a/index.html
+++ b/index.html
@@ -78,20 +78,20 @@
                                     <td colspan="2"><br/></td>
                                 </tr>
                                 <tr>
-                                    <td><a href="https://keybase.io/rfv5s">Keybase</a></td>
                                     <td><a href="https://github.com/RFV5s">Github</a></td>
+                                    <td><a href="https://stackoverflow.com/users/6494274/rfv5s">Stack Overflow</a></td>
                                 </tr>
                                 <tr>
-                                    <td><a href="https://stackoverflow.com/users/6494274/rfv5s">stack overflow</a></td>
                                     <td><a href="https://www.linkedin.com/in/riaanfrancoisventer/">LinkedIn</a></td>
-                                </tr>
-                                <tr>
-                                    <td><a href="https://coinpaprika.com/person/riaan-francois-venter/">Coin Paprika</a></td>
-                                    <td><a href="https://angel.co/riaan-francois-venter-1">Angel List</a></td>
-                                </tr>
-                                <tr>
-                                    <td><a href="https://www.f6s.com/riaanfrancoisventer">F6S</a></td>
                                     <td><a href="twitter https://twitter.com/RFV5s">Twitter</a></td>
+                                </tr>
+                                <tr>
+                                    <td><a href="https://keybase.io/rfv5s">Keybase</a></td>
+                                    <td><a href="https://coinpaprika.com/person/riaan-francois-venter/">Coin Paprika</a></td>
+                                </tr>
+                                <tr>
+                                    <td><a href="https://angel.co/riaan-francois-venter-1">Angel List</a></td>
+                                    <td><a href="https://www.f6s.com/riaanfrancoisventer">F6S</a></td>
                                 </tr>
                                 <tr>
                                     <td span=2 align="center" ><b><br><br>↓↓</b></td>
@@ -112,13 +112,13 @@
                     <h1>ABOUT</h1>
                     <p>
                     <img src="img/RFVenter.jpg" width="256" style="border:2px solid white"/><br><br>
-                    I stand at the bleeding edge of Finance and Computation, creating value, very well. These two fields are my passion, and in the past 13 years, I have written a number of software solutions for leading companies as well as managing substantially large portfolios for wealthy investors in the Middle East and London.</p>
+                    Standing at the bleeding edge of finance and computation, creating value, very well. These two fields are my passion, and in the past 13 years, I have written a number of software solutions for leading companies as well as managing substantially large portfolios for wealthy investors in the Middle East and London.</p>
                     <p>
-                    I am a Software Developer focusing on: numerical computation, data extraction, database implementation, data analysis. I have several certificates in Python, have developed several smart contracts with Solidity, and I am  studying Clojure.</p>
+                    Software development focused on: numerical computation, data extraction, database implementation, data analysis. Python, Solidity, Clojure.</p>
                     <p>
-                    I am a Wealth Manager with a strong background in international investment. I hold a Level 4 Diploma in Investment Advice from the Chartered Institute of Securities and Investments - London, United Kingdom, and several other certificates in finance. I only offer this service to select private investors.</p>
+                    Wealth management in international markets. Level 4 Diploma in Investment Advice from the Chartered Institute of Securities and Investments - London, and several other certificates in finance. Only for select private clients.</p>
                     <p>
-                    By combining these two fields I am actively involved in the FinTech industry, currently focusing on cryptocurrency investment initiatives as well as the decentralized smart contract revolution. I am a cryptocurrency blogger, smart contract developer, as well as part of consortia exploring business opportunities within this field.</p>
+                    Actively involved in FinTech, currently focusing on cryptocurrency investments and smart contracts, and part of a consortia exploring business opportunities within the industry.</p>
                     <p>
                     I am a family man, exercise daily, eat healthily, don't drink alcohol or smoke. I do not watch TV or read news on the Internet that has no relevance to me. I am a focused machine.</p>
                     <h3>Learn About Ethereum</h3>
@@ -183,13 +183,10 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h1>PROGRAMMING</h1>
                     <p>
-                    	Every project that I start, I finish. Every challenge that I face, I overcome. I am able to learn whatever technology stack is required to fix problems, and I look forward to learning more.
+                    	I finish every project that I start. I overcome every challenge that I face. I am able to learn whatever technology stack is required to fix problems, and I look forward to learning more.
                     </p>
                     <p>
-                    	I have enough practical (technical) and theorical (insight) to do whatever is necessary for a project to succeed, and this is why clients love me. I have a substantial knowledge of computation theory, computation complexity and the history and evolution of computers as we know it, and where the computing industry is heading into the future.
-                    </p>
-                    <p>
-                    	I enjoy working on projects with a team that cares about creating quality, maintainable code.
+                    	I have enough practical (technical) and theorical (insight) experience to do whatever is necessary for a project to succeed, and this is why clients love me. I have substantial knowledge of computation theory, computation complexity and the history and evolution of personal computers. This is my foundation in trying to predict where the technology industry is heading towards in the future.
                     </p>
                     <h3>Technology Stack</h3><br>
                     <p>                    	
