Add bitcoin address

--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
                                     <td><a href="mailto:email@RFV5s.com">email@RFV5s.com</a></td>
                                 </tr>
                                 <tr>
+                                    <td colspan="2"><a href="https://www.blockchain.com/btc/address/1RFV5sJ277QSnBgnkXuTffCA1AJxScHpF">1RFV5sJ277QSnBgnkXuTffCA1AJxScHpF</a></td>
+                                </tr>
+                                <tr>
                                     <td colspan="2"><br/></td>
                                 </tr>
                                 <tr>
@@ -83,7 +86,7 @@
                                 </tr>
                                 <tr>
                                     <td><a href="https://www.linkedin.com/in/riaanfrancoisventer/">LinkedIn</a></td>
-                                    <td><a href="twitter https://twitter.com/RFV5s">Twitter</a></td>
+                                    <td><a href="https://twitter.com/RFV5s">Twitter</a></td>
                                 </tr>
                                 <tr>
                                     <td><a href="https://keybase.io/rfv5s">Keybase</a></td>
@@ -94,7 +97,7 @@
                                     <td><a href="https://www.f6s.com/riaanfrancoisventer">F6S</a></td>
                                 </tr>
                                 <tr>
-                                    <td span=2 align="center" ><b><br><br>↓↓</b></td>
+                                    <td span=2 align="center" ><b><br><br>▼</b></td>
                                 </tr>
                             </table>
                         </p>
