Renamed RFVenter and rfv.io to RFV5s

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="RFVenter Professional FinTech Services">
+    <meta name="description" content="RFV5s Professional FinTech Services">
     <meta name="author" content="Riaan F Venter">
 
     <link rel="icon" href="favicon.png">
@@ -14,7 +14,6 @@
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
     <!-- Custom Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
     <!-- Theme CSS -->
@@ -222,7 +221,7 @@
     <footer>
         <div class="container text-center">
             <p>
-                <a href="http://www.rfv.io"><img src="img/RFV5s.svg" height="20px" style="border: none;"/></a>
+                <a href="http://www.RFV5s.com"><img src="img/RFV5s.svg" height="20px" style="border: none;"/></a>
             </p>
             	
         </div>
