--- a/index.html
+++ b/index.html
@@ -171,8 +171,10 @@
                         <tr><td>Udemy</td><td>Introduction to Web Technologies</td></tr>
                         <tr><td>Code School</td><td>Git Real</td></tr>
                         <tr><td>Destin Learning</td><td>Introduction to Cloud Computing and Amazon AWS!</td></tr>
-                    </table></p>
+                    </table>
+                    <p>
                     <a class="btn btn-default btn-lg" href="files/certificates.zip">Certificates</a>
+                    </p>
                 </div>
             </div>
         </div>
