cosmetics: change background to yellow

--- a/index.html
+++ b/index.html
@@ -62,12 +62,11 @@
                     <div class="col-md-8 col-md-offset-2">
                         <p class="intro-text">
                             <font color="white">
-                                Riaan Francois Venter<br>
-                                FinTech
+                                <b>Riaan Francois Venter</b><br><br>
                             </font>
                             <font color="gray"> 
-                                Developer, Investor and Advisor<br><br>
-                                Over a decade of experience with offshore wealth management and software development.
+                                <b>FinTech</b> Developer, Investor and Advisor<br>
+                                More than a decades experience in offshore wealth management and software development.
                             </font>
                             <table style="width:100%; font-size: 23px;">
                                 <tr>
@@ -95,9 +94,6 @@
                                     <td><a href="https://angel.co/riaan-francois-venter-1">Angel List</a></td>
                                     <td><a href="https://www.f6s.com/riaanfrancoisventer">F6S</a></td>
                                 </tr>
-                                <tr>
-                                    <td span=2 align="center" ><b><br><br>▼</b></td>
-                                </tr>
                             </table>
                         </p>
                     </div>
@@ -113,7 +109,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h1><font style="color:rgb(76,76,255)">ABOUT</font></h1>
                     <p>
-                    <img src="img/RFVenter.jpg" width="256" style="border:2px solid white"/><br><br>
+                    <img src="img/RFVenter.jpg" width="256" style="border:8px solid white"/><br><br>
                     Standing at the bleeding edge of finance and computation, creating value, very well. These two fields are my passion, and in the past 13 years, I have written a number of software solutions for leading companies as well as managing substantially large portfolios for wealthy investors in the Middle East and London.</p>
                     <p>
                     Software development focused on: numerical computation, data extraction, database implementation, data analysis. Python, Solidity, Clojure.</p>
