--- a/index.html
+++ b/index.html
@@ -70,13 +70,7 @@
                             </font>
                             <table style="width:100%; font-size: 23px;">
                                 <tr>
-                                    <td><a href="mailto:email@RFV5s.com">email@RFV5s.com</a></td>
-                                </tr>
-                                <tr>
-                                    <td colspan="2"><a href="https://www.blockchain.com/btc/address/1RFV5sJ277QSnBgnkXuTffCA1AJxScHpF">1RFV5sJ277QSnBgnkXuTffCA1AJxScHpF</a></td>
-                                </tr>
-                                <tr>
-                                    <td colspan="2"><br/></td>
+                                    <td><a href="mailto:email@RFV5s.com">email@RFV5s.com</a><br/><br/></td>
                                 </tr>
                                 <tr>
                                     <td><a href="https://github.com/RFV5s">Github</a></td>
@@ -214,16 +208,6 @@
             </div>
         </div>
     </section>
-
-    <!-- Footer -->
-    <footer>
-        <div class="container text-center">
-            <p>
-                <a href="http://www.RFV5s.com"><img src="img/RFV5s.svg" height="20px" style="border: none;"/></a>
-            </p>
-            	
-        </div>
-    </footer>
 
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.js"></script>
