--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                                 <b>Riaan Francois Venter</b><br><br>
                             </font>
                             <font color="gray"> 
-                                <b>FinTech</b> Developer, Investor and Advisor<br>
-                                More than a decades experience in offshore wealth management and software development.
+                                <b>FinTech</b> Developer, Investor and Advisor<br><br>
+                               Over a decades experience in wealth management and software development
                             </font>
                             <table style="width:100%; font-size: 23px;">
                                 <tr>
@@ -101,9 +101,9 @@
         <div class="details-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h1><font style="color:rgb(76,76,255)">ABOUT</font></h1>
+                    <h1><font style="color:rgb(76,76,255)">About</font></h1>
                     <p>
-                    <img src="img/RFVenter.jpg" width="256" style="border:8px solid white"/><br><br>
+                    <img src="img/RFVenter.jpg" width="256" style="border:8px solid rgb(239, 239, 239)"/><br><br>
                     Standing at the bleeding edge of finance and computation, creating value, very well. These two fields are my passion, and in the past 13 years, I have written a number of software solutions for leading companies as well as managing substantially large portfolios for wealthy investors in the Middle East and London.</p>
                     <p>
                     Software development focused on: numerical computation, data extraction, database implementation, data analysis. Python, Solidity, Clojure.</p>
@@ -140,7 +140,7 @@
         <div class="education-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h1><font style="color:rgb(0,164,0)">EDUCATION</font></h1>
+                    <h1><font style="color:rgb(0,164,0)">Education</font></h1>
                     <table class="table">
                         <tr><td>Investment Advice Diploma</td><td>Chartered Institute of Securities and Investments (London)</td></tr>
                         <tr><td>Award in Financial Planning</td><td>CII (London)</td></tr>
@@ -175,7 +175,7 @@
         <div class="programming-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h1><font style="color:rgb(255,28,28)">PROGRAMMING</font></h1>
+                    <h1><font style="color:rgb(255,28,28)">Programming</font></h1>
                     <p>
                     	I finish every project that I start. I overcome every challenge that I face. I am able to learn whatever technology stack is required to fix problems, and I look forward to learning more.
                     </p>
