--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <img id="RFV_logo" src="img/RFV5s.svg" height="37px">
+                    <img id="RFV_logo" src="img/RFV5s_grey_5s.svg" height="37px">
                 </a>
             </div>
 
@@ -61,13 +61,9 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <p class="intro-text">
-                            <font color="white">
-                                <b>Riaan Francois Venter</b><br><br>
-                            </font>
-                            <font color="gray"> 
-                                <b>FinTech</b> Developer, Investor and Advisor<br><br>
-                               Over a decades experience in wealth management and software development
-                            </font>
+                           <b>Riaan Francois Venter</b><br><br>
+                           <b>FinTech</b> Developer, Investor and Advisor<br><br>
+                            Over a decades experience in wealth management and software development
                             <table style="width:100%; font-size: 23px;">
                                 <tr>
                                     <td><a href="mailto:email@RFV5s.com">email@RFV5s.com</a><br/><br/></td>
@@ -103,7 +99,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h1><font style="color:rgb(76,76,255)">About</font></h1>
                     <p>
-                    <img src="img/RFVenter.jpg" width="256" style="border:8px solid rgb(239, 239, 239)"/><br><br>
+                    <img src="img/RFVenter.jpg" width="256" style="border:8px solid white "/><br><br>
                     Standing at the bleeding edge of finance and computation, creating value, very well. These two fields are my passion, and in the past 13 years, I have written a number of software solutions for leading companies as well as managing substantially large portfolios for wealthy investors in the Middle East and London.</p>
                     <p>
                     Software development focused on: numerical computation, data extraction, database implementation, data analysis. Python, Solidity, Clojure.</p>
